--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,14 @@
 :root{
   --red-color: #fc6060;
 }
-
+*{
+  
+}
 /* Box sizing rules */
 *,
 *::before,
 *::after {
-  box-sizing: border-box;  
+  box-sizing: border-box;    
 }
 body{
   overflow-x: hidden;
@@ -96,6 +98,7 @@ select {
     background-image: url('../images/carlos2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .hero__nav{    
@@ -353,6 +356,9 @@ input[type="submit"]{
   bottom: 118px;
   
 }
+.projects{
+  overflow: hidden;
+}
 .projects__title{
   margin: auto;
   margin-top: 1.5rem;
@@ -442,7 +448,8 @@ input[type="submit"]{
   min-height: 100vh;
   padding: 2rem 6rem;  
   color: #888;
-  position: relative;   
+  position: relative;  
+  overflow: hidden; 
 }
 hr{
   background-color: white;  
@@ -576,6 +583,7 @@ hr{
 .contact__right{
   padding: 0 2rem;  
   width: 47vw;
+  overflow: hidden;
 }
 .contact__right--options{
   display: flex;
@@ -749,6 +757,7 @@ footer
  { 
   background-color: #121212;
   margin-top: 4rem;  
+  overflow: hidden;
 }
 .star-container{
   display: flex;
@@ -1191,6 +1200,7 @@ body{
   width: 90vw;  
   border-radius: 17px; 
   background-color: #f9f9f9; 
+  overflow: hidden;
 }
 .contact__left{
   display: none;
